// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxMenuItem should render 1`] = `
<ListBoxMenuItem
  isActive={false}
  isHighlighted={false}
  prefix="bx"
>
  <div
    className="bx--list-box__menu-item"
  >
    <span>
      ListBox.MenuItem
    </span>
  </div>
</ListBoxMenuItem>
`;

exports[`ListBoxMenuItem should render 2`] = `
<ListBoxMenuItem
  isActive={true}
  isHighlighted={false}
  prefix="bx"
>
  <div
    className="bx--list-box__menu-item bx--list-box__menu-item--active"
  >
    <span>
      ListBox.MenuItem
    </span>
  </div>
</ListBoxMenuItem>
`;

exports[`ListBoxMenuItem should render 3`] = `
<ListBoxMenuItem
  isActive={false}
  isHighlighted={true}
  prefix="bx"
>
  <div
    className="bx--list-box__menu-item bx--list-box__menu-item--highlighted"
  >
    <span>
      ListBox.MenuItem
    </span>
  </div>
</ListBoxMenuItem>
`;
